Added native packager SBT plugin for BE packaging.

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -1,10 +1,13 @@
 akka {
   loglevel = "INFO"
+  loglevel = ${?LOG_LEVEL}
 }
 
 oc {
   rest {
     host = "localhost"
+    host = ${?REST_HOST}
     port = 1234
+    port = ${?REST_PORT}
   }
 }
